--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # https://github.com/github/gitignore/blob/master/Global/macOS.gitignore
 # https://github.com/github/gitignore/blob/master/Python.gitignore
 
+# Files created by this script
+*.xlsx
+
 # General
 .DS_Store
 .AppleDouble
